src/App.scss
input,
textarea {
  font-family: 'Helvetica Neue', sans-serif;
}

.loader-hidden {
  display: none;
}

.loader-active {
  display: block;
  position: absolute;
  left: 0;
  right: 0;
  margin: auto;
  top: 0;
  bottom: 0;
  width: 50px;
  height: 50px;
  animation: fadeOut 1s 1s;
  animation-fill-mode: forwards;
}


* {
  font-size: large;
  overflow: hidden;
}


.skill-title {
  font-size: 70px;
  text-shadow: 2px 2px grey;
}

p {
  // font-family: DM Sans;
  // font-weight: bold;
  font-size: 1.25 rem;
  color: #384460;
}

